--- a/CardBattle.cabal
+++ b/CardBattle.cabal
@@ -20,8 +20,8 @@ executable CardBattle
   -- other-modules:       
   build-depends:    base ==4.5.*, containers ==0.4.*, lens ==3.9.*, mtl ==2.1.*, transformers ==0.3.*, free ==3.4.*, monad-loops ==0.4.*
 
-test-suite hoge-test
-  HS-Source-Dirs:   test
+test-suite spec
+  HS-Source-Dirs:   test, src
   type:             exitcode-stdio-1.0
-  main-is:          test.hs
+  main-is:          Spec.hs
   build-depends:    base  ==4.5.*, hspec >=1.3
