--- a/CardBattle.cabal
+++ b/CardBattle.cabal
@@ -17,11 +17,11 @@ cabal-version:      >=1.8
 executable CardBattle
   HS-Source-Dirs:   src
   main-is:          Main.hs        
-  -- other-modules:       
   build-depends:    base ==4.5.*, containers ==0.4.*, lens ==3.9.*, mtl ==2.1.*, transformers ==0.3.*, free ==3.4.*, monad-loops ==0.4.*
 
 test-suite spec
   HS-Source-Dirs:   test, src
   type:             exitcode-stdio-1.0
   main-is:          Spec.hs
-  build-depends:    base  ==4.5.*, hspec >=1.3
+  other-modules:    TargetSpec
+  build-depends:    base  ==4.5.*, hspec >=1.3, containers ==0.4.*, lens ==3.9.*, mtl ==2.1.*, transformers ==0.3.*, free ==3.4.*, monad-loops ==0.4.*
