--- a/CardBattle.cabal
+++ b/CardBattle.cabal
@@ -23,4 +23,4 @@ test-suite spec
   HS-Source-Dirs:   test, src
   type:             exitcode-stdio-1.0
   main-is:          Spec.hs
-  build-depends:    base  ==4.5.*, hspec >=1.3, containers ==0.4.*, lens ==3.9.*, mtl ==2.1.*, transformers ==0.3.*, free ==3.4.*, monad-loops ==0.4.*
+  build-depends:    base  ==4.5.*, hspec >=1.3, QuickCheck>=2.6, containers ==0.4.*, lens ==3.9.*, mtl ==2.1.*, transformers ==0.3.*, free ==3.4.*, monad-loops ==0.4.*
