--- a/CardBattle.cabal
+++ b/CardBattle.cabal
@@ -17,32 +17,33 @@ cabal-version:      >=1.8
 executable CardBattle
   HS-Source-Dirs:   src
   main-is:          Main.hs
-  build-depends:    base == 4.*
-                  , mtl
-                  , transformers
-                  , text
-                  , bytestring
-                  , utf8-string
-                  , random
-                  , lens >= 3.9 && <= 3.10
+  build-depends:    base >=4.7 && <4.8
+                  , mtl >=2.1 && <2.2
+                  , transformers >=0.3 && <0.4
+                  , bytestring >=0.10 && <0.11
+                  , utf8-string >=0.3 && <0.4
+                  , random >=1.0 && <1.1
+                  , lens >= 4.0 && < 4.2
                   , free >= 3.4 && <= 4.2
-                  , aeson >= 0.4.0.0 && <= 0.6.1.0
+                  , aeson >= 0.6.2.0 && < 0.7.0.4
                   , attoparsec >= 0.10.0.0 && <= 0.10.4.0
+                  , scientific >= 0.2
 
 test-suite spec
   HS-Source-Dirs:   test, src
   type:             exitcode-stdio-1.0
   main-is:          Spec.hs
-  build-depends:    base == 4.*
-                  , hspec >= 1.3
-                  , QuickCheck >= 2.6
-                  , mtl
-                  , transformers
-                  , text
-                  , bytestring
-                  , utf8-string
-                  , random
-                  , lens >= 3.9 && <= 3.10
+  build-depends:    base >=4.7 && <4.8
+                  , hspec >=1.5 && <1.9.6
+                  , QuickCheck >=2.4 && <2.7.4
+                  , mtl >=2.1 && <2.2
+                  , transformers >=0.3 && <0.4
+                  , bytestring >=0.10 && <0.11
+                  , utf8-string >=0.3 && <0.4
+                  , random >=1.0 && <1.1
+                  , lens >= 4.0 && < 4.2
                   , free >= 3.4 && <= 4.2
-                  , aeson >= 0.4.0.0 && <= 0.6.1.0
+                  , aeson >= 0.6.0.0 && < 0.7.0.4
                   , attoparsec >= 0.10.0.0 && <= 0.10.4.0
+                  , scientific >= 0.2
+
